fixing image name index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <td>Images of the Planets</td>
       <td><img src="images/jupiter.jpeg" alt="Photo of planet Jupiter"></td>
       <td><img src="images/mars.jpeg" alt="Photo of planet Mars"></td>
-      <td><img src="images/neptune.jpeg" alt="Photo of planet Neptune"></td>
+      <td><img src="images/neptune.webp" alt="Photo of planet Neptune"></td>
       <td><img src="images/saturn.jpeg" alt="Photo of planet Saturn"></td>
     </tr>
     <tr>
