--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <tr>
       <td>Images of the Planets</td>
       <td><img class="image-p" src="images/jupiter.jpeg" alt="Photo of planet Jupiter"></td>
-      <td><img class="image-p" src="images/mars.jpeg" alt="Photo of planet Mars"></td>
+      <td><img class="image-s" src="images/mars.jpeg" alt="Photo of planet Mars"></td>
       <td><img class="image-s" src="images/neptune.webp" alt="Photo of planet Neptune"></td>
       <td><img class="image-p" src="images/saturn.jpeg" alt="Photo of planet Saturn"></td>
     </tr>
