--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     </tr>
     <tr>
       <td>Images of the Planets</td>
-      <td><img class="image-p" src="images/jupiter.jpeg" alt="Photo of planet Jupiter" align="center"></td>
-      <td><img class="image-s" src="images/mars.jpeg" alt="Photo of planet Mars" align="center"></td>
-      <td><img class="image-s" src="images/neptune.webp" alt="Photo of planet Neptune" align="center"></td>
-      <td><img class="image-p" src="images/saturn.jpeg" alt="Photo of planet Saturn" align="center"></td>
+      <td><img class="image-p" src="images/jupiter.jpeg" alt="Photo of planet Jupiter"></td>
+      <td><img class="image-s" src="images/mars.jpeg" alt="Photo of planet Mars""></td>
+      <td><img class="image-s" src="images/neptune.webp" alt="Photo of planet Neptune"></td>
+      <td><img class="image-p" src="images/saturn.jpeg" alt="Photo of planet Saturn"></td>
     </tr>
     <tr>
       <td>Gravity (m/s^2)</td>
