adding css ids index.html

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <td><img class=image-p src="images/saturn.jpeg" alt="Photo of planet Saturn"></td>
     </tr>
     <tr>
+      id="row2"
       <td>Gravity (m/s^2)</td>
       <td>23.1</td>
       <td>3.7</td>
@@ -30,6 +31,7 @@
       <td>9.0</td>
     </tr>
     <tr>
+      id="row3"
       <td>Diameter (km)</td>
       <td>142,984</td>
       <td>6792</td>
@@ -37,6 +39,7 @@
       <td>120,536</td>
     </tr>
     <tr>
+      id="row4"
       <td>Orbital Period (Days)</td>
       <td>4,331</td>
       <td>687.0</td>
@@ -44,6 +47,7 @@
       <td>10,747</td>
     </tr>
     <tr>
+      id="row5"
       <td>Mean Temperature (C)</td>
       <td>-110</td>
       <td>-65</td>
@@ -51,6 +55,7 @@
       <td>-140</td>
     </tr>
     <tr>
+      id="row6"
       <td>Number of Moons</td>
       <td>95</td>
       <td>2</td>
@@ -58,6 +63,7 @@
       <td>146</td>
     </tr>
     <tr>
+      id="row7"
       <td>Ring System?</td>
       <td>Yes</td>
       <td>No</td>
@@ -65,6 +71,7 @@
       <td>Yes</td>
     </tr>
     <tr>
+      id="row8"
       <td>Global Magnetic Field?</td>
       <td>Yes</td>
       <td>No</td>
