fixing styling typos index.html

--- a/index.html
+++ b/index.html
@@ -15,63 +15,56 @@
       <th>Neptune</th>
       <th>Saturn</th>
     </tr>
-    <tr>
+    <tr class="row2">
       <td>Images of the Planets</td>
       <td><img class=image-p src="images/jupiter.jpeg" alt="Photo of planet Jupiter"></td>
       <td><img class=image-s src="images/mars.jpeg" alt="Photo of planet Mars"></td>
       <td><img class=image-s src="images/neptune.webp" alt="Photo of planet Neptune"></td>
       <td><img class=image-p src="images/saturn.jpeg" alt="Photo of planet Saturn"></td>
     </tr>
-    <tr>
-      class="row2"
+    <tr class="row3">
       <td>Gravity (m/s^2)</td>
       <td>23.1</td>
       <td>3.7</td>
       <td>11.0</td>
       <td>9.0</td>
     </tr>
-    <tr>
-      class="row3"
+    <tr class="row4">
       <td>Diameter (km)</td>
       <td>142,984</td>
       <td>6792</td>
       <td>49,528</td>
       <td>120,536</td>
     </tr>
-    <tr>
-      class="row4"
+    <tr class="row5">
       <td>Orbital Period (Days)</td>
       <td>4,331</td>
       <td>687.0</td>
       <td>59,800</td>
       <td>10,747</td>
     </tr>
-    <tr>
-      class="row5"
+    <tr class="row6">
       <td>Mean Temperature (C)</td>
       <td>-110</td>
       <td>-65</td>
       <td>-200</td>
       <td>-140</td>
     </tr>
-    <tr>
-      class="row6"
+    <tr class="row7">
       <td>Number of Moons</td>
       <td>95</td>
       <td>2</td>
       <td>16</td>
       <td>146</td>
     </tr>
-    <tr>
-      class="row7"
+    <tr class="row8">
       <td>Ring System?</td>
       <td>Yes</td>
       <td>No</td>
       <td>Yes</td>
       <td>Yes</td>
     </tr>
-    <tr>
-      class="row8"
+    <tr class="row9">
       <td>Global Magnetic Field?</td>
       <td>Yes</td>
       <td>No</td>
