centering table index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>Planetary Fact Sheet</h1>
-  <table id="planets">
+  <table id="planets" class="center">
     <tr>
       <th></th>
       <th>Jupiter</th>
