centering title index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1>Planetary Fact Sheet</h1>
+  <h1 class="center">Planetary Fact Sheet</h1>
   <table id="planets" class="center">
     <tr>
       <th></th>
